styles/style_posts.css
@import url(vim.css);

.page {
  display: flex;
  flex-wrap: wrap;
  padding: 2em;
}

.section {
  align-items: center;
  justify-content: center;
  margin: 0 auto;
}

body {
  background: black;
  font-family: arial;
/*  font-size: 100%;*/
}


/*POST BODY STYLES*/
/*------*/
.post-body{
  border-radius: 5px;
  background: black;
/*  background: white;*/
  width:  45em;
  margin: 0 auto;
  color: #f5f5f5;
}

.post-body p{
  color: #f5f5f5;
}

.post-title{
  font-size: 1.6em;
  padding: 5% 5% 1% 5%;
}

.post-meta{
  padding: 0% 5% 0% 5%;
}

.post-content{
  padding: 0 5% 4% 5%;
} 

.dt-published{
  color: #f5f5f5;
  text-decoration-line: underline;
  text-decoration-style: solid;
}


.club-higlight {
  text-align: left;
}

/*CODE STYLE*/
.highlighter-rouge{
  width: 90%;
  margin: 0 auto;
}

.highlight{
  padding: 1% 2% 1% 2%;
  border-radius: 5px;
}

p {
  color: white; 
}

.sponsor-logo {
  width: 5em;
}


.logo{
  height: 6em;
  width: 6em;
  display: inline-block;
  margin-left: 26%;
}

.container{
  height: 5em;
  white-space: nowrap;
}

.nav-bar {
  width: 70%;
  display: flex;
  justify-content: flex-end;
  padding: 0 2em;
}

.nav-list li {
  display: inline;
  padding: 0 1em;
}

.nav-link {
  color: white;
  font-weight: bold;
  text-decoration: none;
  transition: color .3s ease;
  position: relative; 
}

.nav-link:after {
  content: '';
  position: absolute;
  width: 0; height: 3px;
  display: block;
  margin-top: 5px;
  right: 0;
  background: #fff;
  transition: width .2s ease;
  -webkit-transition: width .2s ease;
}

.nav-link:hover:after {
  width: 100%;
  left: 0;
  background: #fff;
}

/* Tablet Styles */
@media only screen and (min-width: 401px) and (max-width: 960px) {

}

@media (max-width: 41em) {
  .post-body{
    width:  95%;
  }

}

/*/* Desktop Styles */
@media only screen and (min-width: 961px) {
  #title-panel {
    font-size: 1.6em;
  }

  #info-panel {
    font-size: 1.6em;
  }

  .page {
    padding: 2em 4em;
    display: flex;
    justify-content: space-around;
    align-items: center;
  }

  .nav-bar {
    padding: 1em 2em;
  }
}

